--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
 		"@node-rs/argon2": "^2.0.2",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
+		"@sentry/sveltekit": "^9.40.0",
 		"drizzle-orm": "^0.40.0",
 		"postgres": "^3.4.5"
 	}
